<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".MedInformation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medical_info_for"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/medical_aid_name"
        android:id="@+id/edMedAidName"
        android:drawableLeft="@drawable/local_hospital"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/medical_aid_plan"
        android:id="@+id/edMedAidPlan"
        android:drawableLeft="@drawable/local_hospital"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/medical_aid_number"
        android:id="@+id/edMedAidNumb"
        android:drawableLeft="@drawable/local_hospital"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/allergies"
        android:id="@+id/edPlayerAllergies"
        android:drawableLeft="@drawable/local_hospital"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/first_parent_cell"
        android:id="@+id/edParentCellNo"
        android:inputType="phone"
        android:drawableLeft="@drawable/call"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="@string/second_parent_cell"
        android:id="@+id/ed2ndParentCell"
        android:inputType="phone"
        android:drawableLeft="@drawable/call"
        android:drawablePadding="5dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:onClick="btnSaveMedInfo"
        android:text="@string/save_medical_info"
        android:background="@drawable/button_blue"
        android:textColor="@color/colorWhite"/>


</LinearLayout>