<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".MovePlayer">

    <Spinner
        android:id="@+id/spMovePlayerName"
        android:layout_width="200dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/txtCurrentTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currently_in_the"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_this_player_to"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/spTeamsToMoveTo"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/move_player"
        android:onClick="btnMove_Player"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_blue"/>


</LinearLayout>