<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".RegisterUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:id="@+id/dp"
            android:src="@mipmap/defaultpp"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:id="@+id/imgRegPP"
            android:src="@drawable/ic_menu_camera"/>
    </LinearLayout>


    <EditText
        android:id="@+id/firstName"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center"
        android:drawablePadding="15dp"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/lastName"
        android:textColor="@color/colorWhite"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/emailReg"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/email"
        android:inputType="textEmailAddress"
        android:drawablePadding="15dp"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/passReg"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:drawablePadding="15dp"
        android:textColor="@color/colorWhite"
        android:drawableLeft="@drawable/password_lock"
        android:background="@drawable/edit_text"/>
    <EditText
        android:id="@+id/passRegRetype"
        android:textColor="@color/colorWhite"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:hint="Re-enter Password"
        android:textColorHint="@color/colorWhite"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password_lock"
        android:drawablePadding="15dp"
        android:background="@drawable/edit_text"/>
    <Button
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:textColor="@color/colorWhite"
        android:text="@string/register"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="btnRegister"
        android:background="@drawable/button_blue"/>
</LinearLayout>