<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AdminHome"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:showIn="@layout/app_bar_admin_home">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@mipmap/logo_2"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/add_team"
            android:text="@string/add_team_opponent"
            android:layout_margin="1dp"
            android:onClick="txtAddTeamOrOppButt"
            android:background="@color/colorDarkDva"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/move_players"
            android:text="@string/move_player"
            android:layout_margin="1dp"
            android:onClick="txtMovePlayerButt"
            android:background="@color/colorDarkDva"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/account"
            android:text="@string/roles"
            android:onClick="txtRoleButt"
            android:layout_margin="1dp"
            android:background="@color/colorDarkDva"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/my_players"
            android:text="@string/my_players"
            android:layout_margin="1dp"
            android:onClick="txtMyPlayersButt"
            android:background="@color/colorDarkDva"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"/>
    </LinearLayout>


</LinearLayout>